Update header content text wrapping and fix text padding in team profiles on mobile devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1742,6 +1742,13 @@ section.container {
 			margin-bottom: 1rem;
 		}
 	}
+
+.no-wrap {
+	text-wrap: none;
+	word-break-wrap: none;
+	white-space: nowrap;
+}
+
 /* Images */
 /*.image img {*/
 /*	display: block;*/
